@@ -630,6 +630,7 @@ wxMSW:
 - Improve tooltips wrapping after updating their text (Artur Wieczorek).
 - Fix checking menu items before appending them to the menu.
 - Fix crash when adding/removing the same path to/from wxFileSystemWatcher.
+- Draw "classic" disabled owner drawn buttons better (Artur Wieczorek).
 
 wxOSX:
 
